# fennel_olives_oranges

./: README.md  _environment  _quarto.yml  about.qmd  index.qmd  main.py  polymer  pyproject.toml  styles.css
.quarto/project-cache/: deno-kv-file  deno-kv-file-shm  deno-kv-file-wal
_site/: about.html  index.html  index.xml  listings.json  search.json  sitemap.xml
_site/posts/: bibliography.html
_site/posts/post-with-code/: index.html
docs/: about.html  index-history.xml  index-music.xml  index-news.xml  index-personal.xml  index-projects.xml  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml  styles.css
docs/posts/Crisis/: index.html
docs/posts/bibliography/: index.html
docs/posts/cover_letter/: index.docx
docs/posts/post-with-code/: index.html
docs/posts/slavic_dance/: index.html
docs/posts/welcome/: index.html
docs/site_libs/bootstrap/: bootstrap-02e9a2779f5a7e89b4c160a6c6d0d316.min.css
fennel_olives_oranges/: index.qmd
posts/: bibliography.qmd
posts/Crisis/: index.qmd
posts/bibliography/: index.qmd
posts/cover_letter/: index.qmd
posts/slavic_dance/: index.qmd
