[project]
name = "fennel-olives-oranges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scipy>=1.18.0",
    "shiny>=1.6.3",
    "shinywidgets>=0.8.1",
    "sympy>=1.14.0",
    "tqdm>=4.69.0",
]
